--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
     <h1>Список причин почему Юля классная</h1>
     <ul>
      <li>Она ответственная</li>
-
+        <p>Всегда на связи, не разрешает общаться с подозрительными прохожими, спрашивает как вы доехали.</p>
      <li>Она красивая</li>
-        <a href="https://www.instagram.com/zigmiay/?hl=ru" target="_blank"> Проверить
-
+        <p><a href="https://www.instagram.com/zigmiay/?hl=ru" target="_blank"> (Проверить)</a></p>
+        <p>Если вы согласны, то залайкайте ее инстаграм пожалуйста, чтобы она точно знала!</p>
      <li>Она добрая</li>
-
+        <p>Если Юля злится, значит у нее плохое настроение, не трогайте ее. Ну либо просто вы конч.</p>
      <li>Она знает где эсса по акции</li>
-        <a href="https://edadeal.ru/?nocookiesupport=yes" target="_blank"> (Но можно посмотреть и здесь)
-
+        <p><a href="https://edadeal.ru/?nocookiesupport=yes" target="_blank"> (Но можно посмотреть и здесь)</a></p>
      <li>Она жена мерды киллы</li>
-        <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ" target="_blank"> (Подробнее)
+        <p><a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ" target="_blank"> (Подробнее)</a></p>
 
  </body>
