--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@
     <meta name="description" content="Здесь вы узнаете почему Юля классная колоритная девочка">
     <link rel="shortcut icon" href="https://atom.io/favicon.ico"/>
   </head>
-  <body>
+  <body bgcolor="#1e1c22" text="#fefefe" link="#e5e5e5" vlink="#e5e5e5" alink="#e5e5e5" style="sans-serif:Tahoma">
     <h1>Список причин почему Юля классная</h1>
     <ul>
      <li>Она ответственная</li>
         <p>Всегда на связи, не разрешает общаться с подозрительными прохожими, спрашивает как вы доехали.</p>
+        <br>
      <li>Она красивая</li>
-        <p><a href="https://www.instagram.com/zigmiay/?hl=ru" target="_blank"> (Проверить)</a></p>
+        <a href="https://www.instagram.com/zigmiay/?hl=ru" target="_blank"> (Проверить)</a>
         <p>Если вы согласны, то залайкайте ее инстаграм пожалуйста, чтобы она точно знала!</p>
+        <br>
      <li>Она добрая</li>
         <p>Если Юля злится, значит у нее плохое настроение, не трогайте ее. Ну либо просто вы конч.</p>
+        <br>
      <li>Она знает где эсса по акции</li>
-        <p><a href="https://edadeal.ru/?nocookiesupport=yes" target="_blank"> (Но можно посмотреть и здесь)</a></p>
+        <a href="https://edadeal.ru/?nocookiesupport=yes" target="_blank"> (Но можно посмотреть и здесь)</a>
+        <br>
      <li>Она жена мерды киллы</li>
-        <p><a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ" target="_blank"> (Подробнее)</a></p>
+        <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ" target="_blank"> (Подробнее)</a>
+     <br><br>
+    
+
 
  </body>
