--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
      <li>Она жена мерды киллы</li>
         <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ" target="_blank"> (Подробнее)</a>
      <br><br>
+     <img src="tm.jpg" width="400">
 
 
 
