--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <li>Она жена мерды киллы</li>
         <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ" target="_blank"> (Подробнее)</a>
      <br><br>
-     <img src="tm.jpg" width="400">
+     <img src="https://im0-tub-ru.yandex.net/i?id=e7787b0ba0ef63c884357c06c9de227d-l&n=13" width="400">
 
 
 
