--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="keywords" content="юля пиво, юля донья, юля гейт">
     <meta name="description" content="Здесь вы узнаете почему Юля классная колоритная девочка">
-    <link rel="shortcut icon" href="https://atom.io/favicon.ico"/>
+    <link rel="shortcut icon" href="https://img2.freepng.ru/20180218/scw/kisspng-root-beer-beer-bottle-alcoholic-drink-clip-art-beer-cliparts-5a89af520b6370.5612853515189727540467.jpg"/>
   </head>
-  <body bgcolor="#1e1c22" text="#fefefe" link="#e5e5e5" vlink="#e5e5e5" alink="#e5e5e5" style="sans-serif:Tahoma">
+  <body bgcolor="#1e1c22" text="#fefefe" link="#e5e5e5" vlink="#e5e5e5" alink="#e5e5e5">
     <h1>Список причин почему Юля классная</h1>
     <ul>
      <li>Она ответственная</li>
