--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <li>Она жена мерды киллы</li>
         <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ" target="_blank"> (Подробнее)</a>
      <br><br>
-     <img src="https://www.instagram.com/p/CUdmzj1olgS/?hl=en" width="800">
+     <img src="https://www.instagram.com/p/CL84XQBJPrW/?utm_source=ig_web_copy_link" width="800">
 
 
 
