--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <li>Она жена мерды киллы</li>
         <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ" target="_blank"> (Подробнее)</a>
      <br><br>
-     <img src="https://www.instagram.com/p/CL84XQBJPrW/?utm_source=ig_web_copy_link" width="800">
+     <img src="https://www.google.com/search?q=+tms_geyt&tbm=isch&ved=2ahUKEwjnhriB7L31AhVMtyoKHS3AAJwQ2-cCegQIABAC&oq=+tms_geyt&gs_lcp=ChJtb2JpbGUtZ3dzLXdpei1pbWcQAzoKCCMQ7wMQ6gIQJzoHCCMQ7wMQJzoFCAAQgAQ6BAgAEA06BAgAEB46BggAEAgQHlC5HliiQGCrQmgDcAB4AIABqwGIAbUFkgEDNy4xmAEAoAEBsAEFwAEB&sclient=mobile-gws-wiz-img&ei=vgfoYeevLMzuqgGtgIPgCQ&bih=657&biw=360&client=ms-android-huawei&prmd=ivmxn#imgrc=zY2phsdr3hd8dM" width="800">
 
 
 
