--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <li>Она жена мерды киллы</li>
         <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ" target="_blank"> (Подробнее)</a>
      <br><br>
-     <img src="https://www.google.com/search?q=+tms_geyt&tbm=isch&ved=2ahUKEwjnhriB7L31AhVMtyoKHS3AAJwQ2-cCegQIABAC&oq=+tms_geyt&gs_lcp=ChJtb2JpbGUtZ3dzLXdpei1pbWcQAzoKCCMQ7wMQ6gIQJzoHCCMQ7wMQJzoFCAAQgAQ6BAgAEA06BAgAEB46BggAEAgQHlC5HliiQGCrQmgDcAB4AIABqwGIAbUFkgEDNy4xmAEAoAEBsAEFwAEB&sclient=mobile-gws-wiz-img&ei=vgfoYeevLMzuqgGtgIPgCQ&bih=657&biw=360&client=ms-android-huawei&prmd=ivmxn#imgrc=zY2phsdr3hd8dM" width="800">
+     <img src="https://cdn.instanavigation.com/?https://scontent-amt2-1.cdninstagram.com/v/t51.2885-15/122380254_367356344617709_2367664272777720379_n.jpg?stp=dst-jpg_e35&_nc_ht=scontent-amt2-1.cdninstagram.com&_nc_cat=105&_nc_ohc=c2HybyDhahcAX9Qtsvj&edm=ABfd0MgBAAAA&ccb=7-4&oh=00_AT-w1l3eOO87wpOznCbFdcoDj0_lmuKgVbtt0nf-mBq9SA&oe=6287CD83&_nc_sid=7bff83" width="800" alt="тут должна быта быть фотка">
 
 
 
