--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <li>Она жена мерды киллы</li>
         <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ" target="_blank"> (Подробнее)</a>
      <br><br>
-     <img src="https://cdn.instanavigation.com/?https://scontent-amt2-1.cdninstagram.com/v/t51.2885-15/122380254_367356344617709_2367664272777720379_n.jpg?stp=dst-jpg_e35&_nc_ht=scontent-amt2-1.cdninstagram.com&_nc_cat=105&_nc_ohc=c2HybyDhahcAX9Qtsvj&edm=ABfd0MgBAAAA&ccb=7-4&oh=00_AT-w1l3eOO87wpOznCbFdcoDj0_lmuKgVbtt0nf-mBq9SA&oe=6287CD83&_nc_sid=7bff83" width="700" alt="тут должна была быть фотка">
+     <img src="https://github.com/natamark/tmsgeyt/assets/89277707/d2883880-5c95-4359-b42a-326624c45f5a" width="700" alt="тут должна была быть фотка" title="Это Юля!">
 
 
 
