--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/natamark/tmsgeyt/main/style.css"
     <title>Почему Юля классная</title>
     <meta charset="utf-8">
     <meta name="keywords" content="юля пиво, юля донья, юля гейт">
     <meta name="description" content="Здесь вы узнаете почему Юля классная колоритная девочка">
     <link rel="shortcut icon" href="https://img2.freepng.ru/20180218/scw/kisspng-root-beer-beer-bottle-alcoholic-drink-clip-art-beer-cliparts-5a89af520b6370.5612853515189727540467.jpg"/>
   </head>
-  <body bgcolor="#1e1c22" text="#fefefe" link="#e5e5e5" vlink="#e5e5e5" alink="#e5e5e5">
+  <body>
     <h1>Список причин почему Юля классная</h1>
-    <ul>
-     <li>Она ответственная</li>
+    <br><br>
+    
+     <p>Она ответственная</p>
         <p>Всегда на связи, не разрешает общаться с подозрительными прохожими, спрашивает как вы доехали.</p>
         <br>
-     <li>Она красивая</li>
-        <a href="https://www.instagram.com/zigmiay/?hl=ru" target="_blank"> (Проверить)</a>
-        <p>Если вы согласны, то залайкайте ее инстаграм пожалуйста, чтобы она точно знала!</p>
+     <p>Она красивая</p>
+        <p>Если вы согласны, то залайкайте ее <a href="https://www.instagram.com/zigmiay/?hl=ru">инстаграм</a> пожалуйста, чтобы она точно знала!</p>
         <br>
-     <li>Она добрая</li>
+     <p>Она добрая</p>
         <p>Если Юля злится, значит у нее плохое настроение, не трогайте ее. Ну либо просто вы конч.</p>
         <br>
-     <li>Она знает где эсса по акции</li>
-        <a href="https://edadeal.ru/?nocookiesupport=yes" target="_blank"> (Но можно посмотреть и здесь)</a>
+     <p>Она знает где эсса по акции</p>
+        <a href="https://edadeal.ru/?nocookiesupport=yes" target="_blank">(Но можно посмотреть и здесь)</a>
         <br><br>
-     <li>Она жена мерды киллы</li>
-        <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ" target="_blank"> (Подробнее)</a>
+     <p>Она жена <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ">мерды киллы</a></p>
      <br><br>
-     <img src="https://github.com/natamark/tmsgeyt/assets/89277707/d2883880-5c95-4359-b42a-326624c45f5a" width="700" alt="тут должна была быть фотка" title="Это Юля!">
+     <img src="https://github.com/natamark/tmsgeyt/assets/89277707/d2883880-5c95-4359-b42a-326624c45f5a" alt="тут должна была быть фотка" title="Это Юля!" class="center">
 
 
 
