--- a/index.html
+++ b/index.html
@@ -1,7 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/natamark/tmsgeyt/main/style.css"
+    <style type="text/css">
+body {
+    background:#1e1c22;
+    color:#fefefe;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+a:link {
+    color:#e5e5e5;
+    text-decoration:none;
+}
+
+a:hover {
+    color:#b7a3cc;
+}
+
+h1 {
+    text-align:center;
+}
+
+p {
+    text-align: center;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width:30%;
+}
+        
+    </style>
     <title>Почему Юля классная</title>
     <meta charset="utf-8">
     <meta name="keywords" content="юля пиво, юля донья, юля гейт">
