--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@ body {
 }
 
 a:link {
-    color:#e5e5e5;
+    color:#c9a0dc;
     text-decoration:none;
+    text-align: center;
 }
 
 a:hover {
-    color:#b7a3cc;
+    color:#833ea3;
 }
 
 h1 {
@@ -29,7 +30,7 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width:30%;
+    width:40%;
 }
         
     </style>
@@ -40,6 +41,7 @@ p {
     <link rel="shortcut icon" href="https://img2.freepng.ru/20180218/scw/kisspng-root-beer-beer-bottle-alcoholic-drink-clip-art-beer-cliparts-5a89af520b6370.5612853515189727540467.jpg"/>
   </head>
   <body>
+    <br>
     <h1>Список причин почему Юля классная</h1>
     <br><br>
     
@@ -58,6 +60,8 @@ p {
      <p>Она жена <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ">мерды киллы</a></p>
      <br><br>
      <img src="https://github.com/natamark/tmsgeyt/assets/89277707/d2883880-5c95-4359-b42a-326624c45f5a" alt="тут должна была быть фотка" title="Это Юля!" class="center">
+
+     <br><br><br>
 
 
 
