--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ body {
 a:link {
     color:#c9a0dc;
     text-decoration:none;
-    text-align: center;
 }
 
 a:hover {
@@ -30,7 +29,16 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width:40%;
+    width:50%;
+}
+
+
+div {
+text-align: center;
+{
+text-decoration: none;
+}
+   
 }
         
     </style>
@@ -55,7 +63,11 @@ p {
         <p>Если Юля злится, значит у нее плохое настроение, не трогайте ее. Ну либо просто вы конч.</p>
         <br>
      <p>Она знает где эсса по акции</p>
-        <a href="https://edadeal.ru/?nocookiesupport=yes" target="_blank">(Но можно посмотреть и здесь)</a>
+
+     <div>
+        <a class="a_1" href="https://edadeal.ru/?nocookiesupport=yes" target="_blank">(Но можно посмотреть и здесь)</a>
+    </div>
+
         <br><br>
      <p>Она жена <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ">мерды киллы</a></p>
      <br><br>
