--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@ body {
 }
 
 a:link {
-    color:#c9a0dc;
+    color:#e3cced;
     text-decoration:none;
+    font-weight: bold;
 }
 
 a:hover {
@@ -65,7 +66,7 @@ text-decoration: none;
      <p>Она знает где эсса по акции</p>
 
      <div>
-        <a class="a_1" href="https://edadeal.ru/?nocookiesupport=yes" target="_blank">(Но можно посмотреть и здесь)</a>
+        <p>(Но можно посмотреть и <a class="a_1" href="https://edadeal.ru/?nocookiesupport=yes" target="_blank"> здесь</a>)</p>
     </div>
 
         <br><br>
@@ -73,7 +74,7 @@ text-decoration: none;
      <br><br>
      <img src="https://github.com/natamark/tmsgeyt/assets/89277707/d2883880-5c95-4359-b42a-326624c45f5a" alt="тут должна была быть фотка" title="Это Юля!" class="center">
 
-     <br><br><br>
+     <br><br><br><br><br>
 
 
 
