--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width:50%;
+    width:70%;
+    border-radius: 10px;
 }
 
 
@@ -52,7 +53,7 @@ text-decoration: none;
   <body>
     <br>
     <h1>Список причин почему Юля классная</h1>
-    <br><br>
+    <br>
     
      <p>Она ответственная</p>
         <p>Всегда на связи, не разрешает общаться с подозрительными прохожими, спрашивает как вы доехали.</p>
@@ -69,7 +70,7 @@ text-decoration: none;
         <p>(Но можно посмотреть и <a class="a_1" href="https://edadeal.ru/?nocookiesupport=yes" target="_blank"> здесь</a>)</p>
     </div>
 
-        <br><br>
+        <br><br><br>
      <p>Она жена <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ">мерды киллы</a></p>
      <br><br>
      <img src="https://github.com/natamark/tmsgeyt/assets/89277707/d2883880-5c95-4359-b42a-326624c45f5a" alt="тут должна была быть фотка" title="Это Юля!" class="center">
