--- a/index.html
+++ b/index.html
@@ -35,12 +35,25 @@ p {
 }
 
 
-div {
+span {
 text-align: center;
 {
 text-decoration: none;
 }
+
    
+}
+
+div {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background:#2d2a33;
+    text-align: center;
+    width: 70%;
+    border-radius: 30px;
+
+
 }
         
     </style>
@@ -56,19 +69,27 @@ text-decoration: none;
     <br>
     
      <p>Она ответственная</p>
+     <div>
         <p>Всегда на связи, не разрешает общаться с подозрительными прохожими, спрашивает как вы доехали.</p>
+    </div>
         <br>
      <p>Она красивая</p>
+     <div>
         <p>Если вы согласны, то залайкайте ее <a href="https://www.instagram.com/zigmiay/?hl=ru">инстаграм</a> пожалуйста, чтобы она точно знала!</p>
+    </div>
         <br>
      <p>Она добрая</p>
-        <p>Если Юля злится, значит у нее плохое настроение, не трогайте ее. Ну либо просто вы конч.</p>
-        <br>
-     <p>Она знает где эсса по акции</p>
-
      <div>
-        <p>(Но можно посмотреть и <a class="a_1" href="https://edadeal.ru/?nocookiesupport=yes" target="_blank"> здесь</a>)</p>
+        <p>Если Юля злится, значит у нее плохое настроение, не трогайте ее. Ну либо просто вы конч.</p>
     </div>
+        <br>
+     <div>
+        <p>Она знает где эсса по акции</p>
+    </div>
+
+     <span>
+        <p>(Но можно посмотреть и <a class="a_1" href="https://edadeal.ru/?nocookiesupport=yes" target="_blank"> здесь</a>)</p>
+     </span>
 
         <br><br><br>
      <p>Она жена <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ">мерды киллы</a></p>
