--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ text-decoration: none;
 }
 
 div {
+    width: 70%;
+    height: fit-content;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -92,7 +94,10 @@ div {
      </span>
 
         <br><br><br>
+    <div>
      <p>Она жена <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ">мерды киллы</a></p>
+    </div>
+
      <br><br>
      <img src="https://github.com/natamark/tmsgeyt/assets/89277707/d2883880-5c95-4359-b42a-326624c45f5a" alt="тут должна была быть фотка" title="Это Юля!" class="center">
 
