--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ text-decoration: none;
 
 div {
     width: 70%;
-    height: fit-content;
+    height: ;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -92,7 +92,7 @@ div {
         <p>(Но можно посмотреть и <a class="a_1" href="https://edadeal.ru/?nocookiesupport=yes" target="_blank"> здесь</a>)</p>
      </span>
 </div>
-        <br><br><br>
+        <br><br>
     <div>
      <p>Она жена <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ">мерды киллы</a></p>
     </div>
