--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ text-decoration: none;
    
 }
 
-div {
+.block {
     width: 70%;
     height: ;
     display: block;
@@ -71,29 +71,29 @@ div {
     <br>
     
      <p>Она ответственная</p>
-     <div>
+     <div class="block">
         <p>Всегда на связи, не разрешает общаться с подозрительными прохожими, спрашивает как вы доехали.</p>
     </div>
         <br>
      <p>Она красивая</p>
-     <div>
+     <div class="block">
         <p>Если вы согласны, то залайкайте ее <a href="https://www.instagram.com/zigmiay/?hl=ru">инстаграм</a> пожалуйста, чтобы она точно знала!</p>
     </div>
         <br>
      <p>Она добрая</p>
-     <div>
+     <div class="block">
         <p>Если Юля злится, значит у нее плохое настроение, не трогайте ее. Ну либо просто вы конч.</p>
     </div>
         <br>
      
         <p>Она знает где эсса по акции</p>
-<div>
+<div class="block">
      <span>
         <p>(Но можно посмотреть и <a class="a_1" href="https://edadeal.ru/?nocookiesupport=yes" target="_blank"> здесь</a>)</p>
      </span>
 </div>
         <br><br>
-    <div>
+    <div class="block">
      <p>Она жена <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ">мерды киллы</a></p>
     </div>
 
