--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@ text-decoration: none;
 
 .block {
     width: 100%;
-    height: ;
+    height: 50px;
     display: block;
+    padding: 50px;
     margin-left: auto;
     margin-right: auto;
     background:#2d2a33;
