--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ text-decoration: none;
 
 .block {
     width: 100%;
-    height: 50px;
+    height: ;
     display: block;
     padding: 50px;
     margin-left: auto;
@@ -94,9 +94,9 @@ text-decoration: none;
      </span>
 </div>
         <br><br>
-    <div class="block">
+
      <p>Она жена <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ">мерды киллы</a></p>
-    </div>
+  
 
      <br><br>
      <img src="https://github.com/natamark/tmsgeyt/assets/89277707/d2883880-5c95-4359-b42a-326624c45f5a" alt="тут должна была быть фотка" title="Это Юля!" class="center">
