--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@ text-decoration: none;
      </span>
 </div>
         <br><br>
-
+    <div class="block">
      <p>Она жена <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ">мерды киллы</a></p>
-  
+    </div>
 
      <br><br>
      <img src="https://github.com/natamark/tmsgeyt/assets/89277707/d2883880-5c95-4359-b42a-326624c45f5a" alt="тут должна была быть фотка" title="Это Юля!" class="center">
