--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@ text-decoration: none;
 }
 
 .block {
+    display: block;
     width: 100%;
     height: ;
-    display: block;
+    font-size: medium;
     padding: 50px;
     margin-left: auto;
     margin-right: auto;
