--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ text-decoration: none;
     display: block;
     width: 100%;
     height: ;
-    font-size: medium;
+    font-size: large;
     padding: 50px;
     margin-left: auto;
     margin-right: auto;
@@ -95,6 +95,7 @@ text-decoration: none;
      </span>
 </div>
         <br><br>
+     <p>А еще</p>
     <div class="block">
      <p>Она жена <a href="https://www.youtube.com/channel/UCUGp07kgXupqYjU8S_LeoWQ">мерды киллы</a></p>
     </div>
