--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@ a:hover {
 
 h1 {
     text-align:center;
+    font-family: 'Inter';
+    font-style: italic;
+    font-weight: 300;
+    font-size: 48px;
+    line-height: 58px;
 }
 
 p {
