--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ text-decoration: none;
     <meta charset="utf-8">
     <meta name="keywords" content="юля пиво, юля донья, юля гейт">
     <meta name="description" content="Здесь вы узнаете почему Юля классная колоритная девочка">
-    <link rel="shortcut icon" href="https://img2.freepng.ru/20180218/scw/kisspng-root-beer-beer-bottle-alcoholic-drink-clip-art-beer-cliparts-5a89af520b6370.5612853515189727540467.jpg"/>
+    <link rel="shortcut icon" href="https://static.vecteezy.com/system/resources/previews/019/607/543/original/beer-mug-graphic-clipart-design-free-png.png"/>
   </head>
   <body>
     <br>
