--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ text-decoration: none;
 
 .block {
     display: block;
-    height: ;
+    height: 300px;
     font-size: large;
     padding: 50px;
     margin-left: auto;
